--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/IconCrypto.png" />
+    <link rel="icon" type="image/svg+xml" href="/IconCrypto.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CryptoWave</title>
   </head>
